--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/PrinceMahdi/mahdi-shirmohammadi-brainflix-api.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mahdi Shirmohammadi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PrinceMahdi/mahdi-shirmohammadi-brainflix-api/issues"
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/PrinceMahdi/mahdi-shirmohammadi-brainflix-api#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
